# coremidi-rs

./: CHANGELOG.md  COVERAGE.md  COVERAGE_AUDIT.md  COVERAGE_AUDIT_V2.md  Cargo.toml  README.md  build.rs
examples/: 01_loopback_smoke.rs  14_async_streams.rs  capability_snapshot.rs  client_overview.rs  driver_metadata.rs  endpoint_snapshot.rs  network_session.rs  notification_decode.rs  packet_buffers.rs  port_create.rs  property_lookup.rs  setup_snapshot.rs  thru_roundtrip.rs
src/: async_api.rs  capability.rs  cf.rs  client.rs  driver.rs  endpoint.rs  error.rs  lib.rs  network.rs  notification.rs  object.rs  packet.rs  port.rs  private.rs  property.rs  setup.rs  thru_connection.rs
src/ffi/: mod.rs
swift-bridge/: Package.swift
swift-bridge/Sources/CoreMIDIBridge/: AsyncStream.swift  Capability.swift  Client.swift  Core.swift  Driver.swift  Endpoint.swift  Network.swift  Notification.swift  PacketEventList.swift  Port.swift  Property.swift  Setup.swift  ThruConnection.swift
swift-bridge/Sources/CoreMIDIBridge/include/: CoreMIDIBridge.h
tests/: api_coverage.rs  async_stream_tests.rs  capability_area.rs  client_area.rs  driver_area.rs  endpoint_area.rs  network_area.rs  notification_area.rs  packet_area.rs  port_area.rs  property_area.rs  setup_area.rs  thru_connection_area.rs
