[package]
name = "coremidi-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/doom-fish/coremidi-rs"
repository = "https://github.com/doom-fish/coremidi-rs"
description = "Safe Rust bindings for Apple's CoreMIDI framework — MIDI clients, ports, virtual endpoints, packets, and MIDI 2.0 event lists on macOS"
authors = ["Per Johansson <per@doom.fish>"]
keywords = ["midi", "coremidi", "macos", "music", "apple"]
categories = ["api-bindings", "multimedia::audio", "os::macos-apis"]
rust-version = "1.76"
readme = "README.md"
build = "build.rs"
include = [
    "src/**/*",
    "examples/**/*",
    "tests/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
    "CHANGELOG.md",
]

[lints.rust]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[lib]
name = "coremidi"
crate-type = ["lib"]

[dependencies]
apple-cf = { version = ">=0.4.0, <0.6" }
libc = "0.2"

[dev-dependencies]
regex-lite = "0.1"

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[[example]]
name = "01_loopback_smoke"

[profile.release]
debug = "full"
strip = "none"
