[package]
name = "coremidi-rs"
version = "0.5.1"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/doom-fish/coremidi-rs"
repository = "https://github.com/doom-fish/coremidi-rs"
description = "Safe Rust bindings for Apple's CoreMIDI framework — clients, ports, endpoints, MIDI 1.0/2.0 packets, notifications, networking, setup, thru connections, drivers, and MIDI-CI/UMP capabilities on macOS"
authors = ["Per Johansson <per@doom.fish>"]
keywords = ["midi", "coremidi", "macos", "music", "apple"]
categories = ["api-bindings", "multimedia::audio", "os::macos-apis"]
rust-version = "1.76"
readme = "README.md"
build = "build.rs"
include = [
    "src/**/*",
    "swift-bridge/Package.swift",
    "swift-bridge/Sources/**/*",
    "examples/**/*",
    "tests/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
    "CHANGELOG.md",
    "COVERAGE.md",
]

[lints.rust]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[lib]
name = "coremidi"
crate-type = ["lib"]

[features]
default = []
raw-ffi = []
async = ["dep:doom-fish-utils"]

[dependencies]
apple-cf = { version = ">=0.9, <0.10" }
doom-fish-utils = { path = "../doom-fish-utils", version = ">=0.1, <0.3", optional = true }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
pollster = "0.3"
regex-lite = "0.1"

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[profile.release]
debug = "full"
strip = "none"
